add gender to product model

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,15 @@ defusedxml==0.7.1
 dill==0.3.4
 Django==3.2
 django-allauth==0.50.0
+django-bootstrap-form==3.4
+django-crispy-forms==1.14.0
+django-filter==21.1
 idna==3.3
 isort==5.10.1
 lazy-object-proxy==1.7.1
 mccabe==0.7.0
 oauthlib==3.2.0
+Pillow==9.1.0
 platformdirs==2.5.2
 pycparser==2.21
 PyJWT==2.3.0
