--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,66 @@
-asgiref==3.5.1
-astroid==2.11.4
+asgiref==3.5.0
+astroid==2.8.4
+black==21.12b0
+cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.15.0
-charset-normalizer==2.0.12
-cryptography==37.0.2
+charset-normalizer==2.0.7
+click==8.0.3
+cloudinary==1.29.0
+crispy-bootstrap5==0.6
+cryptography==36.0.2
 defusedxml==0.7.1
-dill==0.3.4
+dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2
-django-allauth==0.50.0
-django-bootstrap-form==3.4
+django-allauth==0.41.0
+django-bootstrap-datepicker-plus==4.0.0
 django-crispy-forms==1.14.0
-django-filter==21.1
-idna==3.3
-isort==5.10.1
-lazy-object-proxy==1.7.1
-mccabe==0.7.0
-oauthlib==3.2.0
-Pillow==9.1.0
-platformdirs==2.5.2
+flake8==4.0.1
+Flask==2.0.2
+Flask-SQLAlchemy==2.5.1
+google-auth==2.3.0
+google-auth-oauthlib==0.4.6
+gspread==4.0.1
+gunicorn==20.1.0
+idna==3.2
+isort==5.9.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+lazy-object-proxy==1.6.0
+MarkupSafe==2.0.1
+mccabe==0.6.1
+mypy-extensions==0.4.3
+oauthlib==3.1.1
+pathspec==0.9.0
+Pillow==9.0.1
+platformdirs==2.4.0
+postgres==4.0
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
+psycopg2-pool==1.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.8.0
 pycparser==2.21
+pyflakes==2.4.0
 PyJWT==2.3.0
-pylint==2.13.8
+pylint==2.11.1
+pylint-django==2.5.0
+pylint-flask==0.6
+pylint-flask-sqlalchemy==0.2.0
+pylint-plugin-utils==0.7
 python3-openid==3.2.0
-pytz==2022.1
+pytz==2021.3
 requests==2.27.1
-requests-oauthlib==1.3.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.16.0
+SQLAlchemy==1.4.31
 sqlparse==0.4.2
-tomli==2.0.1
-typing_extensions==4.2.0
-urllib3==1.26.9
-wrapt==1.14.1
+toml==0.10.2
+tomli==1.2.3
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+Werkzeug==2.0.2
+wrapt==1.13.2
