--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-database-url==1.0.3
 django-extensions==3.1.5
 django-filter==21.1
 djhtml==1.5.0
+gunicorn==20.1.0
 idna==3.3
 isort==5.10.1
 lazy-object-proxy==1.7.1
