--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ botocore==1.27.15
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
+coverage==6.4.1
 cryptography==37.0.2
 defusedxml==0.7.1
 dill==0.3.4
